--- a/TestSample/app/src/main/res/layout/activity_main.xml
+++ b/TestSample/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,14 @@
 
         />
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/next_activity_button"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
+
 </RelativeLayout>
